@@ -5,6 +5,18 @@
         https://bugs.webkit.org/show_bug.cgi?id=79962
         <rdar://problem/10922215>
 
+        Unreviewed, adding forgotten file.
+
+        * jit/JITCompilationEffort.h: Added.
+        (JSC):
+
+2012-02-29  Filip Pizlo  <fpizlo@apple.com>
+
+        The JIT should not crash the entire process just because there is not
+        enough executable memory, if the LLInt is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=79962
+        <rdar://problem/10922215>
+
         Reviewed by Gavin Barraclough.
         
         Added the notion of JITCompilationEffort. If we're JIT'ing as a result of
